@@ -5,6 +5,7 @@
 #include "dll_tracker_library.h"
 #include "dll_tracker_file.h"
 #include "dll_tracker_socket.h"
+#include "dll_tracker_critical_section.h"
 #include "DllLoader.h"
 
 #ifdef _cplusplus
@@ -35,6 +36,7 @@ void tracker_dll_free(DllLoader* pDll)
         tracker_library_free_all(*it);
         tracker_file_free_all(*it);
         tracker_socket_free_all(*it);
+        tracker_critical_section_free_all(*it);
       }
       catch (...)
       {
