@@ -37,8 +37,8 @@ typedef std::list<HMODULE>::iterator DllListIter;
 typedef std::list<unsigned long*> DummyList;
 typedef std::list<unsigned long*>::iterator DummyListIter;
 
-typedef std::list<unsigned long*> DummyList;
-typedef std::list<unsigned long*>::iterator DummyListIter;
+typedef std::list<LPCRITICAL_SECTION> CriticalSectionList;
+typedef std::list<LPCRITICAL_SECTION>::iterator CriticalSectionListIter;
 
 typedef std::list<SOCKET> SocketList;
 typedef std::list<SOCKET>::iterator SocketListIter;
@@ -59,6 +59,8 @@ typedef struct _DllTrackInfo
   
   FileList fileList;
   SocketList socketList;
+  CriticalSectionList criticalSectionList;
+  
 } DllTrackInfo;
 
 typedef std::list<DllTrackInfo*> TrackedDllList;
